argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  # ✏️ Replace YOUR_NAME with your name (lowercase, no spaces)
  name: nginx-lab-geerttorsin
  # ✏️ Replace YOUR_STUDENT_ID with your student ID, e.g. student-12
  namespace: bac-lab-student-5
  labels:
    app: nginx-lab
    trainee: geerttorsin
spec:
  selector:
    app: nginx-lab
    trainee: geerttorsin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
